--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
   <body>
     <canvas></canvas>
 
-    <script type="application/javascript" src="vendor/keymaster.js"></script>
-
     <script type="application/javascript" src="lib/game.js"></script>
     <script type="application/javascript" src="lib/gameView.js"></script>
+    <script type="application/javascript" src="lib/sandParticle.js"></script>
 
     <script type="application/javascript">
       (function () {
@@ -20,6 +19,10 @@
         var ctx = canvasEl.getContext("2d");
         var game = new SandGame.Game();
         new SandGame.GameView(game, ctx).start();
+
+        canvasEl.onclick = function(event){
+          game.makeParticle(event.x, event.y);
+        };
       })();
     </script>
   </body>
