make solid stop particles (increase thickness of line)

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
   </head>
 
   <body>
+
     <canvas></canvas>
+    <p>Press "t" to turn solid on and off</p>
 
     <script type="application/javascript" src="lib/game.js"></script>
     <script type="application/javascript" src="lib/gameView.js"></script>
