Add very basic save and load game

--- a/index.html
+++ b/index.html
@@ -7,9 +7,14 @@
 
     <canvas></canvas>
     <div>
+
       <p>Press "t" for solid on and off</p>
       <p>Press "w" for water on and off</p>
       <p>Press "d" for delete on and off</p>
+
+      <p>p to save</p>
+      <p>o to open saved game</p>
+
     </div>
     
 
@@ -51,6 +56,10 @@
             game.toggleWater();
           } else if (String.fromCharCode(event.charCode) === "d"){
             game.toggleDelete();
+          } else if (String.fromCharCode(event.charCode) === "p"){
+            game.showSave();
+          } else if (String.fromCharCode(event.charCode) === "o"){
+            game.loadGame();
           }
         }
       })();
