--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
       <p>Press "t" for solid on and off</p>
       <p>Press "w" for water on and off</p>
       <p>Press "c" for cloud on and off</p>
+      <p>Press "e" for dirt/earth on and off</p>
+
       <p>Press "d" for delete on and off</p>
 
       <p>p to save</p>
@@ -24,6 +26,7 @@
     <script type="application/javascript" src="lib/util.js"></script>
     <script type="application/javascript" src="lib/movingParticle.js"></script>
     <script type="application/javascript" src="lib/sandParticle.js"></script>
+    <script type="application/javascript" src="lib/dirtParticle.js"></script>
     <script type="application/javascript" src="lib/solidParticle.js"></script>
     <script type="application/javascript" src="lib/waterParticle.js"></script>
     <script type="application/javascript" src="lib/cloudParticle.js"></script>
@@ -53,13 +56,15 @@
 
         this.onkeypress = function(event){
           if (String.fromCharCode(event.charCode) === "t"){
-            game.toggleSolid();
+            game.toggleMode("solid");
           } else if (String.fromCharCode(event.charCode) === "w"){
-            game.toggleWater();
+            game.toggleMode("water");
           } else if (String.fromCharCode(event.charCode) === "c"){
-            game.toggleCloud();
+            game.toggleMode("cloud");
+          } else if (String.fromCharCode(event.charCode) === "e"){
+            game.toggleMode("dirt");
           } else if (String.fromCharCode(event.charCode) === "d"){
-            game.toggleDelete();
+            game.toggleMode("deletePen");
           } else if (String.fromCharCode(event.charCode) === "p"){
             game.showSave();
           } else if (String.fromCharCode(event.charCode) === "o"){
