--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <script type="application/javascript" src="lib/stoneParticle.js"></script>
     <script type="application/javascript" src="lib/waterParticle.js"></script>
     <script type="application/javascript" src="lib/seedParticle.js"></script>
-    <script type="application/javascript" src="lib/Flower.js"></script>
+    <script type="application/javascript" src="lib/flower.js"></script>
     <script type="application/javascript" src="lib/cloudParticle.js"></script>
     
 
