Move acceleration to particle init function

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <script type="application/javascript" src="lib/waterParticle.js"></script>
     <script type="application/javascript" src="lib/seedParticle.js"></script>
     <script type="application/javascript" src="lib/flower.js"></script>
+    <script type="application/javascript" src="lib/stalk.js"></script>
     <script type="application/javascript" src="lib/cloudParticle.js"></script>
     
 
