--- a/index.html
+++ b/index.html
@@ -77,6 +77,8 @@
         document.getElementsByClassName("sand")[0].addEventListener("click", toggleSand);
         document.getElementsByClassName("dirt")[0].addEventListener("click", toggleDirt);
         document.getElementsByClassName("seed")[0].addEventListener("click", toggleSeed);
+        document.getElementsByClassName("cloud")[0].addEventListener("click", toggleCloud);
+        document.getElementsByClassName("delete")[0].addEventListener("click", toggleDelete);
         document.getElementsByClassName("save")[0].addEventListener("click", saveGame);
         document.getElementsByClassName("open")[0].addEventListener("click", openGame);
         document.getElementsByClassName("clear")[0].addEventListener("click", clearGame);
@@ -105,6 +107,10 @@
           game.toggleMode("cloud");
         }
 
+        function toggleDelete(){
+          game.toggleMode("delete");
+        }
+
         function saveGame(){
           game.showSave();
         }
@@ -123,9 +129,6 @@
         };
 
         canvasEl.onmousemove = function(event){
-          // ctx;
-          // canvasEl;
-          // debugger;
           game.moveMouse(event.offsetX, event.offsetY);
         };
 
@@ -147,7 +150,7 @@
           } else if (String.fromCharCode(event.charCode) === "s"){
             game.toggleMode("sand");
           } else if (String.fromCharCode(event.charCode) === "d"){
-            game.toggleMode("deletePen");
+            game.toggleMode("delete");
           } else if (String.fromCharCode(event.charCode) === "p"){
             game.showSave();
           } else if (String.fromCharCode(event.charCode) === "o"){
