Add link to code

--- a/index.html
+++ b/index.html
@@ -33,6 +33,14 @@
       <br>
       <button class="clear">clear all</button>
 
+      <br>
+      <br>
+      <br>
+      <br>
+
+
+      <a href="https://github.com/emilycw/SandGame" style="color:#191919; text-decoration: none;">Code for this game</a>
+
     </div>
     
 
@@ -54,7 +62,7 @@
       (function () {
         var canvasEl = document.getElementsByTagName("canvas")[0];
         SandGame.Game.DIM_X = window.innerWidth - 250;
-        SandGame.Game.DIM_Y = window.innerHeight + 10;
+        SandGame.Game.DIM_Y = window.innerHeight+2;
         canvasEl.width = SandGame.Game.DIM_X;
         canvasEl.height = SandGame.Game.DIM_Y;
 
