--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
     <script type="application/javascript" src="lib/seedParticle.js"></script>
     <script type="application/javascript" src="lib/flower.js"></script>
     <script type="application/javascript" src="lib/stalk.js"></script>
+    <script type="application/javascript" src="lib/seedData.js"></script>
     <script type="application/javascript" src="lib/cloudParticle.js"></script>
     
 
