--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
       <br>
       <br>
 
+      <button class="more">Toggle pen size (x)</button>
+
       <button class="stone">stone/rock (r)</button>
       <button class="water">water (w)</button>
       <button class="cloud">cloud (c)</button>
@@ -88,6 +90,7 @@
         document.getElementsByClassName("seed")[0].addEventListener("click", toggleSeed);
         document.getElementsByClassName("cloud")[0].addEventListener("click", toggleCloud);
         document.getElementsByClassName("delete")[0].addEventListener("click", toggleDelete);
+        document.getElementsByClassName("more")[0].addEventListener("click", toggleSize);
         document.getElementsByClassName("save")[0].addEventListener("click", saveGame);
         document.getElementsByClassName("open")[0].addEventListener("click", openGame);
         document.getElementsByClassName("clear")[0].addEventListener("click", clearGame);
@@ -118,6 +121,10 @@
 
         function toggleDelete(){
           game.toggleMode("delete");
+        }
+
+        function toggleSize(){
+          game.toggleSize();
         }
 
         function saveGame(){
@@ -160,6 +167,8 @@
             game.toggleMode("sand");
           } else if (String.fromCharCode(event.charCode) === "d"){
             game.toggleMode("delete");
+          } else if (String.fromCharCode(event.charCode) === "x"){
+            game.toggleSize();
           } else if (String.fromCharCode(event.charCode) === "p"){
             game.showSave();
           } else if (String.fromCharCode(event.charCode) === "o"){
