comment out form

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <button class="seed">seed/flower (f)</button>
       <button class="delete">delete (d)</button>
 
-      <form class="custom-sand">
+      <!-- <form class="custom-sand">
         Color (hex):<br>
         <input type="text" name="colorHex" value="#ffffff">
         <br>
@@ -39,7 +39,7 @@
         <input type="integer" name="density" value="1">
         <br>
         <input type="submit" value="Use custom sand">
-      </form>
+      </form> -->
 
       <br>
       <br>
